tests/language_tests/pass/0065_while_zero_is_falsy.ee
fn main() {
    while (0) {
        print(1);
    }
    print(2);
}
