tests/language_tests/fail/0004_no_function_parenthesis.ee
fn notMain {
    print(1);
}
